[metadata]
name = CRADLE
version = 0.24.0
description = Correct Read Counts and Analysis of Differently Expressed Regions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
url = https://github.com/ReddyLab/CRADLE
author = Young-Sook Kim
author_email = ys91240@gmail.com

[options]
packages =
    CRADLE
    CRADLE.CorrectBias
    CRADLE.CorrectBiasStored
    CRADLE.CallPeak
    CRADLE.correctbiasutils
    CRADLE.Normalize
package_dir =
    CRADLE=CRADLE
zip_safe = False
scripts = bin/cradle
