[metadata]
name = CRADLE
version = 0.26.1
description = Correct Read Counts and Analysis of Differently Expressed Regions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
url = https://github.com/ReddyLab/CRADLE
author = Young-Sook Kim
author_email = kys91240@gmail.com

[options]
packages =
    CRADLE
    CRADLE.CalculateCovariates
    CRADLE.CorrectBias
    CRADLE.CorrectBiasStored
    CRADLE.CallPeak
    CRADLE.correctbiasutils
    CRADLE.Normalize
    CRADLE.logging
package_dir =
    CRADLE=CRADLE
zip_safe = False
scripts = bin/cradle
